2002-02-14  James Henstridge  <james@daa.com.au>

	* m4macros/glib-gettext.m4: add third argument to the AC_DEFINE
	calls, so users of the macro don't need to add entries to
	acconfig.h in their package.

2002-02-13  Havoc Pennington  <hp@redhat.com>

	* glib/gmain.c (g_main_context_check): never dispatch sources of
	mixed priority, because while iterating over the dispatch array a
	new source with more priority may be added, while a source with
	less priority remains in the dispatch array

2002-02-11  Darin Adler  <darin@bentspoon.com>

	* glib/gmessages.h: Use "if (expr) { } else" as I meant to in the
	first place. The other form can trigger warnings in some compilers
	that suspect a ";" after "if (expr)" is an error.

2002-02-11  Manish Singh  <yosh@gimp.org>

	* glib/gmessages.h: need statement terminators for the if clauses for
	the preceding change.

2002-02-11  Darin Adler  <darin@bentspoon.com>

	* glib/gmessages.h: Use "if (expr) else" rather than
	"if (!(expr))" so the parentheses don't disable the gcc
	warnings about = vs. ==.

2002-02-11  jacob berkman  <jacob@ximian.com>

	* glib/gmarkup.h (g_markup_error_quark): match the signature in
	the implementation

2002-02-10  Hans Breuer  <hans@breuer.org>

	* glib/gfileutils.c : no sym links on win32, no lstat in msvcrt

	* tests/makefile.msc.in : added uri-test

2002-02-09  Darin Adler  <darin@bentspoon.com>

	* glib/gmarkup.c: (xml_isspace): New.
	(skip_spaces): g_unichar_isspace -> xml_isspace
	* glib/gstrfuncs.c: (g_ascii_strtod): isspace -> g_ascii_isspace
	isxdigit -> g_ascii_isxdigit, isdigit -> g_ascii_isdigit

2002-02-09  Matthias Clasen  <matthias@local>

	* tests/markups/valid-4.gmarkup: Test attribute value delimiters.

	* glib/gmarkup.c (g_markup_parse_context_parse): Support 
	' and " as attribute value delimiters.  (#70677)

2002-02-09  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* configure.in: Make --disable-threads work again. (#71034)
